--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,2 +1,6 @@
-add.offer.description.not.empty=Description must not be empty.
-add.offer.description.length=Description must be between 5 and 500 symbols.
+add.campaign.description.length=Description must be between 5 and 500 symbols.
+nav_bar_language=Language
+nav_bar_login=Login
+nav_bar_all_campaigns=All Campaigns
+nav_bar_add_offers=Add Campaign
+nav_bar_login_register=Register
