--- a/src/main/resources/i18n/messages_bg.properties
+++ b/src/main/resources/i18n/messages_bg.properties
@@ -1,6 +1,6 @@
 add.offer.description.length=?????????? ?????? ?? ? ????? 5 ? 500 ?????.
 
-nav_bar_language=????
+nav_bar_language=?????????
 nav_bar_login=????
 nav_bar_all_campaigns=??? ?????? ????????
 nav_bar_add_campaign=?????? ????????
